# aruspix

./: .gitignore  CMDLINE.md  CMakeLists.txt  CNAME  LICENSE.txt  README.md  _config.yml  about.html  changes.txt  downloads.html  emc  index.html  install_festa_dies.sh  publications.html  remove_festa_dies.sh
1.5/: permissions.sh
1.5/linux/: aruspix.mdsp
1.5/osx/: Aruspix-Info.plist  environment.plist
1.5/varia/: Annonce.doc  memo.rtf  memo_help.txt  memo_svg_font.txt
1.5/win32/: Aruspix.dsw  AruspixInstallerScript.iss  Decoder.dsp  Decoder.plg  Ngram.dsp  Ngram.plg  Torch.dsw  Torch.ncb  copy.bat
_layouts/: default.html
cmd-line/: CMakeLists.txt
cmd-line/sample/: test.tiff
css/: aruspix.scss  bootstrap-theme.css  bootstrap-theme.min.css  bootstrap.css  bootstrap.min.css
data/models/: builtin.axmus  builtin.axtyp
data/svg/: alt_double_sharp.xml  alt_double_sharp_mensural.xml  alt_flat.xml  alt_flat_mensural.xml  alt_natural.xml  alt_natural_mensural.xml  alt_sharp.xml  alt_sharp_mensural.xml  clef_C.xml  clef_C_mensural.xml  clef_F.xml  clef_F_mensural.xml  clef_G.xml  clef_G8.xml  clef_G_chiavette.xml  clef_G_mensural.xml  fermata_down.xml  figure_0.xml  figure_1.xml  figure_2.xml  figure_3.xml  figure_4.xml  figure_5.xml  figure_6.xml  figure_7.xml  figure_8.xml  figure_9.xml  head_half.xml  head_half_diamond.xml  head_quarter.xml  head_quarter_filldiamond.xml  head_whole.xml  head_whole_diamond.xml  head_whole_fill.xml  head_whole_filldiamond.xml  meter_symb_2_cut.xml  meter_symb_3_cut.xml  meter_symb_cut.xml  orn_mordent.xml  rest_128.xml  (+16 more)
doc/: aruspix.conf  aruspix.css.xml  aruspix.xpr  index.xml
doc/aruspix/: ApplicationMenu.tiff  BarLine.tiff  BassClefButtons.tiff  BlackBorderRed.tiff  CantoClef.tiff  ColorationButton.tiff  EditButton.tiff  EditScreen.tiff  FClef.tiff  FusaWithBreve.tiff  Highlight.tiff  InsertButton.tiff  LigatureSample.tiff  NewBookWindow.tiff  OctaveKeySignatures.tiff  OpenNewFileButton.tiff  PPCorrection.tiff  ScannedTextRaw.tiff  ToolBar.tiff  ZoomButtons.tiff  aruspix.aux  aruspix.tex
doc/torch/: Makefile_options_SAMPLE
doc/wolfgang/: element.xlsx  memo_wolfgang.txt
downloads/: Aruspix2.3FontInstaller.dmg  index.html
emscripten/: compile
emscripten/demo/: dynamic.html  dynamic_mei.xhtml  generate_test.sh  keyboard.html
images/: aruspix.xcf  header.xcf  screenshot.tiff
linux/: CMakeLists.torch.txt  CMakeLists.txt  FindLibMei.cmake
linux-ml/: CMakeLists.txt
local/en/: aruspix.chm  aruspix.hhc  aruspix.hhk  aruspix.hhp  display.hhc  display.hhp  superimposition.hhp
local/fr/: aruspix.hhp  aruspix.po  display.hhp  superimposition.hhp  superimposition.mo
osx/: Aruspix 2.3 Font Installer.dmg  Aruspix-Info.plist  aruspix.pmproj  ax.icns  build_installer.sh  environment.plist  index.html  install_festa_dies.sh  installer.tif  remove_festa_dies.sh  sample_environment.plist
osx/aruspix.pmdoc/: 01install-contents.xml  01install.xml  index.xml
osx/aruspix.xcodeproj/: laurent.mode1v3  laurent.pbxuser  project.pbxproj  puginl.mode1  puginl.mode1v3  puginl.pbxuser  puginlocal.mode1
osx/installer/: background.xcf
osx/torch.xcodeproj/: project.pbxproj  puginl.mode1  puginl.pbxuser  puginlocal.mode1  puginlocal.pbxuser
src/: README.RTF
src/app/: about.wdr  about_wdr.cpp  about_wdr.h  app.wdr  app_wdr.cpp  app_wdr.h  ax.rc  axabout.wdr  axabout_wdr.cpp  axabout_wdr.h  axapp.cpp  axapp.h  axapp.wdr  axapp_wdr.cpp  axapp_wdr.h  axbatchcontroller.cpp  axbatchcontroller.h  axctrl.cpp  axctrl.h  axdc.cpp  axdc.h  axdefs.h  axenv.cpp  axenv.h  axfile.cpp  axfile.h  axframe.cpp  axframe.h  axgotodlg.cpp  axgotodlg.h  aximage.cpp  aximage.h  aximagecontroller.cpp  aximagecontroller.h  aximcontrol_wdr.h  axoptions.wdr  axoptions_wdr.cpp  axoptions_wdr.h  axoptionsdlg.cpp  axoptionsdlg.h  (+22 more)
src/cmdline/: main.cpp
src/comparison/: cmp.cpp  cmp.h  cmp.wdr  cmp_wdr.cpp  cmp_wdr.h  cmp_wdr_inc.cpp  cmpctrl.cpp  cmpctrl.h  cmpfile.cpp  cmpfile.h  cmpim.cpp  cmpim.h  cmpmlf.cpp  cmpmlf.h  cmpmus.cpp  cmpmus.h  cmpwg.cpp  cmpwg.h
src/display/: display_wdr.cpp
src/doc/: readme.aux  readme.dvi  readme.maf  readme.tex
src/edition/: edt.cpp  edt.h  edt.wdr  edt_wdr.cpp  edt_wdr.h  edt_wdr_inc.cpp  edtfile.cpp  edtfile.h  wgviewer.cpp  wgviewer.wdr  wgviewer_wdr.h
src/empty/: empty.cpp  empty.wdr  empty_wdr.cpp  empty_wdr.h
src/im/: im_brink.c  im_brink.cpp  im_ext.cpp  im_kmeans.c  im_kmeans.h  imbrink.cpp  imbrink3classes.cpp  imext.cpp  imext.h  imkmeans.c  imkmeans.cpp  imoperator.cpp  imoperator.h  impage.cpp  impage.h  imregister.cpp  imregister.h  imstaff.cpp  imstaff.h  imstaffsegment.cpp  imstaffsegment.h
src/julius/: Makefile_sample copy.sample  Makefile_sample.sample  main.c  output_aruspix.c
src/ml/: ml.h  mldecoder.cpp  mldecoder.h  mldecoderpage.cpp  mldecoderpage.h  mldecoderstaff.cpp  mldecoderstaff.h  mlhmm.cpp  mlhmm.h  mlngram.cpp  mlngrambuilder.cpp  mlngrambuilder.h  mlngramentry.cpp  mlngramentry.h
src/mus/: aligner.cpp  aligner.h  app.cpp  app.h  barline.cpp  barline.h  bboxdc.cpp  bboxdc.h  beam.cpp  beam.h  clef.cpp  clef.h  devicecontext.cpp  devicecontext.h  doc.cpp  doc.h  durationinterface.cpp  emscripten_main.cpp  headless_main.cpp  interfacecontroller.cpp  interfacecontroller.h  io.cpp  iodarms.cpp  iodarms.h  iomei.cpp  iomei.h  iomusxml.cpp  iomusxml.h  iopae.cpp  iopae.h  keysig.cpp  keysig.h  layer.cpp  layer.h  layerelement.cpp  layerelement.h  leipzigbbox.cpp  leipzigbbox.h  ligature.cpp  main.cpp  (+191 more)
src/musapp/: mus.wdr  musiobin.cpp  musiobin.h  musiomlf.cpp  musiomlf.h  musiowwg.cpp  musiowwg.h  (+9 more)
src/unused/cmd-line-torch/: CMakeLists.txt
test/: fakemus.cpp  fakemusrc.cpp
varia/: 00000400003641-1.1.1.pae  00000400003643-1.1.1.pae  00000400013981-1.1.1.pae  001.darms  002.darms  glyph_info.c  memo_help.txt  memo_svg_font.txt  spacing.xlsx
win32/: Adapter.dsp  Adapter.plg  Aruspix.dsp  Aruspix.ncb  Aruspix.opt  Aruspix.plg  AruspixInstallerScript.iss  Decoder.dsp  Decoder.dsw  Decoder.ncb  Decoder.opt  Decoder.plg  Ngram.dsp  Ngram.plg  Torch.ncb  Torch.opt  clean.bat  local.bat
(+368 files in other folders)
